--- a/templates/safe.html
+++ b/templates/safe.html
@@ -19,7 +19,8 @@
   <div class="grid" id="grid"></div>
 
   <script>
-    const API_URL = "https://tgbot-production-97ae.up.railway.app/api/safe";
+    // const API_URL = "https://tgbot-production-97ae.up.railway.app/api/safe";
+    const API_URL = "https://intramarginal-existentialistically-corrin.ngrok-free.dev";
 
     const grid = document.getElementById('grid');
 
