--- a/templates/safe.html
+++ b/templates/safe.html
@@ -19,7 +19,7 @@
   <div class="grid" id="grid"></div>
 
   <script>
-    const API_URL = "https://intramarginal-existentialistically-corrin.ngrok-free.dev ";
+    const API_URL = "https://intramarginal-existentialistically-corrin.ngrok-free.dev/api/safe";
 
     const grid = document.getElementById('grid');
 
