--- a/templates/safe.html
+++ b/templates/safe.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>СЕЙФ 250</title>
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}"> -->
-  <link rel="stylesheet" href="../static/main.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+  <!-- <link rel="stylesheet" href="../static/main.css"> -->
 </head>
 <body>
 
@@ -54,13 +54,13 @@
   <!-- ── Footer ── -->
   <footer>SAFE-250 &nbsp;·&nbsp; REAL-TIME</footer>
 
-  <!-- <script>
+  <script>
     window.API_URL = "{{ api_url }}";
-  </script> -->
+  </script>
 
-<script> window.API_URL = "https://твій-ngrok.ngrok-free.dev/api/safe"; </script>
+<!-- <script> window.API_URL = "https://твій-ngrok.ngrok-free.dev/api/safe"; </script> -->
 
-<!-- <script src="{{ url_for('static', filename='app.js') }}"></script> -->
+<script src="{{ url_for('static', filename='app.js') }}"></script>
  <script src="../static/app.js"></script>
 </body>
 </html>
